[package]
authors = ["Guil. Sperb Machado <guil@axlabs.com>"]
name = "tfhe-gps-distance"
version = "0.1.0"
edition = "2024"

# Define the library target
[lib]
name = "tfhe_gps_distance"
path = "src/lib.rs"

# Define the binary target
[[bin]]
name = "tfhe-gps-distance"
path = "src/main.rs"

[dependencies]
tfhe = { version = "1.3.3", features = ["boolean", "shortint", "integer"]}
geo = "0.31.0"

[dev-dependencies]
criterion = "0.7.0"